test/scc_test/stmt/semantic-errors/004.t
void test()
{
    for (;;)
        case 1:
            ;
}